fix: code block size on ios isnt huge anymore

--- a/assets/_reset.scss
+++ b/assets/_reset.scss
@@ -62,3 +62,7 @@ hr {
 	border-top: 1px solid var(--front-colour-2);
 	max-width: 20%;
 }
+
+code {
+    text-size-adjust: 100%;
+}
